--- a/samples/FacebookShareSample/FacebookShareSample/Base.lproj/Main.storyboard
+++ b/samples/FacebookShareSample/FacebookShareSample/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eI7-Ao-Wf8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eI7-Ao-Wf8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -56,6 +56,30 @@
                                                 <constraint firstItem="ESe-cF-fhH" firstAttribute="top" secondItem="6JX-Dt-kX1" secondAttribute="top" id="TE0-bt-UCe"/>
                                                 <constraint firstItem="ESe-cF-fhH" firstAttribute="leading" secondItem="6JX-Dt-kX1" secondAttribute="leading" id="TVl-8j-wcm"/>
                                                 <constraint firstAttribute="bottom" secondItem="ESe-cF-fhH" secondAttribute="bottom" id="ZMM-gm-95I"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="48" id="9a1-9o-V8E">
+                                        <rect key="frame" x="0.0" y="76" width="414" height="48"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9a1-9o-V8E" id="YLC-h2-tPQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="48"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qf8-tr-nvH">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="48"/>
+                                                    <inset key="titleEdgeInsets" minX="16" minY="8" maxX="16" maxY="8"/>
+                                                    <state key="normal" title="Photo"/>
+                                                    <connections>
+                                                        <action selector="sharePhoto" destination="54x-My-c2X" eventType="touchUpInside" id="EDd-Ih-r8z"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Qf8-tr-nvH" secondAttribute="trailing" id="0d4-mC-75K"/>
+                                                <constraint firstItem="Qf8-tr-nvH" firstAttribute="leading" secondItem="YLC-h2-tPQ" secondAttribute="leading" id="2eO-0O-pxh"/>
+                                                <constraint firstAttribute="bottom" secondItem="Qf8-tr-nvH" secondAttribute="bottom" id="OVy-YY-if4"/>
+                                                <constraint firstItem="Qf8-tr-nvH" firstAttribute="top" secondItem="YLC-h2-tPQ" secondAttribute="top" id="cLh-8q-leo"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
